# FairLogue

./: README.md  pyproject.toml
Component1/: __init__.py  intersectional_metrics.py  utilities.py
FairLogue/Component1/: intersectional_metrics.py  synthetic_data.csv  synthetic_test.py
